# personalpaehal1

./: .gitignore  README.md  requirements.txt
docs/: gpt_sovits_analysis.md  gpt_sovits_integration.md
gptsovits_backend/: .env  .gitignore  =2.0.1  generate_test_audio.py  generate_test_data.py  prepare_reference_audio.py  pyproject.toml  test_endpoints.py  verify_audio.py  verify_model.py  verify_tts_output.py
gptsovits_backend/app/: config.py  main.py
gptsovits_backend/app/models/: gpt_sovits.py  text_utils.py  tts.py  utils.py
gptsovits_backend/app/routers/: tts.py
gptsovits_backend/app/services/: tts_service.py
gptsovits_backend/docs/: gpt_sovits_integration.md
gptsovits_backend/models/: README.md
gptsovits_backend/test_data/: README.md  test_texts.json
gptsovits_backend/tests/: __init__.py  conftest.py  mock_models.py  test_gpt_sovits.py  test_japanese_text.py  test_tts_endpoints.py  test_tts_modes.py  test_tts_service.py
models/gpt_sovits/: README.md
src/: hello.py
