[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.6"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
torch = ">=2.0.1"
numpy = ">=1.20.0,<2.0.0"
scipy = ">=1.7.0,<2.0.0"
librosa = ">=0.9.0,<0.10.0"
ffmpeg-python = ">=0.2.0"
pydantic-settings = ">=2.0.0"
python-multipart = ">=0.0.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
